--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,5 @@
 [theme]
-primaryColor = "#4CAF50"            # A green primary color
-backgroundColor = "#f0f0f5"         # Light grey background
+primaryColor = "#d8240c"            # A green primary color
+backgroundColor = "#fffefa"         # Light grey background
 secondaryBackgroundColor = "#ffffff" # White for container backgrounds
-textColor = "#333333"               # Dark grey text color
-font = "monospace"                 # Font family options: 'sans serif', 'serif', 'monospace'
+textColor = "#202020"               # Dark grey text color
